@@ -3,6 +3,7 @@ X-editable changelog
 
 Version 1.4.5 wip
 ----------------------------
+[enh #78] allow html in editable content (vitalets)
 [enh] update container position when datetimepicker viewMode changes (vitalets)
 [enh #255] remove xxxView options from first level config of datetimepicker (vitalets)
 [enh] if `display` defined as function call it on init (vitalets)
